<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".welcomeActivity"
    android:padding="20dp"
    android:layout_gravity="center_vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:src="@drawable/logo"
        android:contentDescription="@string/welcomeNote"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeNote"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeSubNote"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/f_name"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/et_welcome_first_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/edit_text_style"
        android:paddingLeft="10dp"
        android:inputType="text"
        android:hint="@null"
        android:autofillHints="no"
        tools:targetApi="o"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/l_name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_welcome_last_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/edit_text_style"
        android:paddingLeft="10dp"
        android:hint="@null"
        android:inputType="text"
        android:autofillHints="no"
        tools:targetApi="o"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/email"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_welcome_email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/edit_text_style"
        android:paddingLeft="10dp"
        android:hint="@null"
        android:autofillHints="no"
        tools:targetApi="o"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/pwd"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_welcome_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_style"
        android:paddingLeft="10dp"
        android:hint="@null"
        android:autofillHints="no"
        tools:targetApi="o" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/c_pwd"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/et_welcome_confirmed_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_style"
        android:paddingLeft="10dp"
        android:hint="@null"
        android:autofillHints="no"
        tools:targetApi="o"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:layout_weight="1.5"
        android:background="#FF3AB642"
        android:onClick="saveProfile"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/save"
        android:textColor="@color/primary"
        android:textSize="18sp" />

</LinearLayout>