<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteEditActivity"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end">

        <EditText
            android:layout_gravity="right"
            android:id="@+id/et_edit_note_header"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/quote_header"
            android:background="@drawable/note_edit_text"
            android:textColor="@color/secondary"
            android:padding="10dp"
            android:autofillHints="no"
            tools:targetApi="o"
            android:inputType="none" />


        <EditText
            android:id="@+id/et_edit_note_content"
            android:gravity="top"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/note_edit_text"
            android:hint="@string/quote"
            android:textColor="@color/secondary_light"
            android:padding="10dp"
            android:autofillHints="no"
            tools:targetApi="o"
            android:inputType="none" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">


            <Button
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@android:color/holo_red_dark"
                android:onClick="discardNote"
                android:text="@string/discard"
                android:textColor="@color/primary" />

            <Button
                android:id="@+id/btn_save_note"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="#019C04"
                android:onClick="saveUpdatedNote"
                android:text="@string/save"
                android:textColor="#FFF8F8" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>