<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@android:color/white"
    app:cardElevation="2dp"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_note_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noteHeader"
            android:textColor="@color/secondary"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_note_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/noteContent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:textSize="13sp"-->
                    <!--android:textColor="@color/white_sub_text"-->
                    <!--android:text="@string/createdOn" />-->

                <TextView
                    android:id="@+id/tv_note_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/white_sub_text"
                    android:text="" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_note_id"
                android:layout_width="0dp"
                android:layout_height="0dp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/holo_red_dark"
                android:onClick="deleteNote"
                android:text="@string/delete"
                android:textColor="@color/primary" />

            <Button
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_dark"
                android:onClick="editNote"
                android:text="@string/edit"
                android:textColor="@color/secondary" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>